-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u60
-
Component/s: javafx
-
Environment:
Windows 8.1
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8129860 | 9 | Kirill Kirichenko | P3 | Resolved | Fixed |
The time sliders on the Streaming media player tabs in Ensemble8 works fine on WIndows, but the same time slider on the Advanced Media tab does not respond. If you move the slider the video stops playing and never starts again.
- backported by
-
JDK-8129860 Advanced Media Player tab does not respond to "Time" slider on Windows
-
- Resolved
-
- relates to
-
JDK-8130219 Seek fails for media streams after several tries
-
- Resolved
-
-
JDK-8090033 FX application hangs on exit when media gets stuck
-
- Closed
-