8088823: Advanced Media Player tab does not respond to "Time" slider on Windows

Reviewed-by: kcr, almatvee